--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -8,6 +8,7 @@
         <CheckBox Content="Correlation between Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="60,77,0,0" VerticalAlignment="Top"/>
         <CheckBox Content="Correlation between Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="60,97,0,0" VerticalAlignment="Top"/>
         <CheckBox Content="Correlation between Life Expectancy and per Capita Income" HorizontalAlignment="Left" Margin="60,117,0,0" VerticalAlignment="Top"/>
+        <Button Content="Calculate Correlation" HorizontalAlignment="Left" Margin="210,148,0,0" VerticalAlignment="Top" Width="75"/>
 
     </Grid>
 </Window>
