--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/App.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="GUI_LifeExpectancy.App"
+﻿<Application x:Class="Project.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
