Adding code for checkboxes to display data as per the checked boxes

--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -5,11 +5,11 @@
     <Grid>
         <TextBox HorizontalAlignment="Center" Height="23" Margin="109,10,117,0" TextWrapping="Wrap" Text="Life Expectancy Based on Socio Economic Indicators" VerticalAlignment="Top" Width="291" TextChanged="TextBox_TextChanged"/>
         <TextBox HorizontalAlignment="Center" Height="39" Margin="60,38,64,0" TextWrapping="Wrap" Text="This project aims to find the correlation between the life expectancy and Socieconomic indicators like Poverty,Unemployment,per Capita Income" VerticalAlignment="Top" Width="393" TextChanged="TextBox_TextChanged"/>
-        <CheckBox Content="Correlation between Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="60,77,0,0" VerticalAlignment="Top" Checked="life_poverty"/>
-        <CheckBox Content="Correlation between Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="60,97,0,0" VerticalAlignment="Top" Checked="life_unemployment"/>
-        <CheckBox Content="Correlation between Life Expectancy and per Capita Income" HorizontalAlignment="Left" Margin="60,117,0,0" VerticalAlignment="Top" Checked="life_perCapitaIncome"/>
+        <CheckBox Content="Correlation between Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="60,77,0,0" VerticalAlignment="Top" Checked="life_poverty" Name="LifePoverty"/>
+        <CheckBox Content="Correlation between Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="60,97,0,0" VerticalAlignment="Top" Checked="life_unemployment" Name="LifeUnemployment"/>
+        <CheckBox Content="Correlation between Life Expectancy and per Capita Income" HorizontalAlignment="Left" Margin="60,117,0,0" VerticalAlignment="Top" Checked="life_perCapitaIncome" Name="LifeperCapita"/>
         <Button Content="Calculate Correlation" HorizontalAlignment="Left" Margin="186,148,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click"/>
-        <TextBox HorizontalAlignment="Left" Height="117" Margin="60,180,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="403" Name="ResultBox"/>
+        <TextBox HorizontalAlignment="Left" Height="117" Margin="22,180,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="475" Name="ResultBox"/>
 
     </Grid>
 </Window>
