--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <TextBox HorizontalAlignment="Center" Height="23" Margin="109,10,117,0" TextWrapping="Wrap" Text="Life Expectancy Based on Socio Economic Indicators" VerticalAlignment="Top" Width="291" TextChanged="TextBox_TextChanged"/>
+        <TextBox HorizontalAlignment="Center" Height="23" Margin="109,10,117,0" TextWrapping="Wrap" Text="Life Expectancy Based on Socio Economic Indicators" VerticalAlignment="Top" Width="291" TextChanged="TextBox_TextChanged" SelectionBrush="#FF3C99FF" Background="#FF3E962E" />
         <TextBox HorizontalAlignment="Center" Height="39" Margin="60,38,64,0" TextWrapping="Wrap" Text="This project aims to find the correlation between the life expectancy and Socieconomic indicators like Poverty,Unemployment,per Capita Income" VerticalAlignment="Top" Width="393" TextChanged="TextBox_TextChanged"/>
         <CheckBox Content="Correlation between Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="60,77,0,0" VerticalAlignment="Top" Checked="life_poverty"/>
         <CheckBox Content="Correlation between Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="60,97,0,0" VerticalAlignment="Top" Checked="life_unemployment"/>
