--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -1,7 +1,10 @@
 ﻿<Window x:Class="Project.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" 
+        Height="{Binding SystemParameters.PrimaryScreenHeight}" 
+    Width="{Binding SystemParameters.PrimaryScreenWidth}"
+        Background="WhiteSmoke" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="175*"/>
@@ -13,8 +16,7 @@
         <Button Content="Calculate Correlation" HorizontalAlignment="Left" Margin="0,153,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click" Grid.Column="1"/>
         <TextBox HorizontalAlignment="Left" Height="117" Margin="22,192,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="475" Name="ResultBox" Grid.ColumnSpan="2"/>
         <Button Content="Clear" HorizontalAlignment="Left" Margin="247,153,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Grid.Column="1"/>
-        <Label Content="Life Expectancy Based on Socio Economic Indicators" HorizontalAlignment="Left" Margin="122,7,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <Label Content="This project aims to find the correlation between the life expectancy and&#xD;&#xA; Socieconomic indicators like Poverty,Unemployment,per Capita Income" Margin="60,33,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="395" Height="50"/>
-
+        <Label Content="Life Expectancy Based on Socio Economic Indicators" HorizontalAlignment="Left" Margin="122,207,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Target="{Binding}" />
+        <Label Content="This project aims to find the correlation between the life expectancy and&#xD;&#xA; Socieconomic indicators like Poverty,Unemployment,per Capita Income" Margin="45,12,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" HorizontalAlignment="Left" Width="395" Height="50"/>
     </Grid>
 </Window>
