--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -4,11 +4,11 @@
         Title="MainWindow" 
         Height="350" 
     Width="525"
-        Background="WhiteSmoke" WindowStartupLocation="CenterScreen">
+        Background="WhiteSmoke" WindowStartupLocation="CenterScreen" WindowStyle="ThreeDBorderWindow">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="71" />
-            
+
             <RowDefinition Height="240*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -23,11 +23,10 @@
                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
                  ScrollViewer.VerticalScrollBarVisibility="Auto"
                  ScrollViewer.CanContentScroll="True"
-                 Height="75" Margin="22,153,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" Name="ResultBox" Grid.Row="1" Grid.Column="1" />
+                 Height="75" Margin="78,152,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" Name="ResultBox" Grid.Row="1" Grid.ColumnSpan="2" />
         <Button Content="Clear" HorizontalAlignment="Left" Margin="195,116,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Grid.Column="1" Grid.Row="1" />
         <Label Content="Find the Correlation between:" HorizontalAlignment="Left" VerticalAlignment="Top" Target="{Binding}" Grid.Column="1" Grid.Row="1" FontWeight="Bold" FontFamily="Tahoma" Foreground="Gray" Margin="22,0,0,0" FontSize="15" />
-        <Label Content="Life Expectancy Based on SocioEconomic Indicators" VerticalContentAlignment="Center" HorizontalAlignment="Left" FontFamily="Tahoma" FontWeight="Bold" FontSize="15" Background="darkturquoise" Width="404" Grid.Column="1" Foreground="White" Margin="0,0,0,240" Grid.RowSpan="2" />
-        <Label Content="City Of Chicago" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Name="label1" FontFamily="Tahoma" Background="darkturquoise" Width="103" FontWeight="Bold" Foreground="White" Grid.ColumnSpan="2" Margin="0,0,400,240" Grid.RowSpan="2" />
-        
+        <Label Content="Life Expectancy Based on Socio Economic Indicators&#xD;&#xA;                             City of Chicago" VerticalContentAlignment="Center" HorizontalAlignment="Left" FontFamily="Tahoma" FontWeight="Bold" FontSize="15" Background="darkturquoise" Width="404" Foreground="White" Margin="56,13,0,10" Grid.ColumnSpan="2" />
+
     </Grid>
 </Window>
