--- a/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
+++ b/GUI-LifeExpectancy/GUI-LifeExpectancy/MainWindow.xaml
@@ -13,26 +13,27 @@
             <RowDefinition Height="240*" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="103*"/>
-            <ColumnDefinition Width="404*"/>
+            <ColumnDefinition Width="74*"/>
+            <ColumnDefinition Width="33*"/>
+            <ColumnDefinition Width="258*"/>
         </Grid.ColumnDefinitions>
-        <CheckBox Content="Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="25,189,0,0" VerticalAlignment="Top"  x:Name="LifePoverty" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" />
-        <CheckBox Content="Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="25,210,0,0" VerticalAlignment="Top"  x:Name="LifeUnemployment" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" />
-        <CheckBox Content="Life Expectancy and per Capita Income" HorizontalAlignment="Left" Margin="25,231,0,0" VerticalAlignment="Top"  x:Name="LifeperCapita" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" />
-        <Button Content="Calculate Correlation" HorizontalAlignment="Left" Margin="29,290,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click" Grid.Column="1" Grid.Row="1" />
+        <CheckBox Content="Life Expectancy and Poverty" HorizontalAlignment="Left" Margin="25,189,0,0" VerticalAlignment="Top"  x:Name="LifePoverty" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Grid.ColumnSpan="2" />
+        <CheckBox Content="Life Expectancy and Unemployment" HorizontalAlignment="Left" Margin="25,210,0,0" VerticalAlignment="Top"  x:Name="LifeUnemployment" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Grid.ColumnSpan="2" />
+        <CheckBox Content="Life Expectancy and per Capita Income" HorizontalAlignment="Left" Margin="25,231,0,0" VerticalAlignment="Top"  x:Name="LifeperCapita" Grid.Row="1" Grid.Column="1" Foreground="Gray" FontFamily="Tahoma" FontSize="13" Grid.ColumnSpan="2" />
+        <Button Content="Calculate Correlation" HorizontalAlignment="Left" Margin="29,290,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2" />
         <TextBox HorizontalAlignment="Left"
 			ScrollViewer.HorizontalScrollBarVisibility="Auto"
 			ScrollViewer.VerticalScrollBarVisibility="Auto"
 			ScrollViewer.CanContentScroll="True"
-			Height="75" Margin="78,367,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" x:Name="ResultBox" Grid.Row="1" Grid.ColumnSpan="2" />
-        <Button Content="Clear" HorizontalAlignment="Left" Margin="195,289,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Grid.Column="1" Grid.Row="1" />
-        <Label Content="Find the Correlation between:" HorizontalAlignment="Left" VerticalAlignment="Top" Target="{Binding}" Grid.Column="1" Grid.Row="1" FontWeight="Bold" FontFamily="Tahoma" Foreground="Gray" Margin="22,157,0,0" FontSize="15" />
-        <Label Content="Life Expectancy Based on Socio Economic Indicators&#xD;&#xA;City of Chicago" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Tahoma" FontWeight="Bold" FontSize="18" Background="darkturquoise" Width="700" Foreground="White"  Grid.ColumnSpan="2" Margin="193,10,202,588" Grid.RowSpan="2" />
-        <Button Grid.ColumnSpan="2" Content="Click here to view Life Expectancy for &#xD;&#xA;different communities in Chicago" HorizontalAlignment="Left" Margin="28,37,0,0" Grid.Row="1" VerticalAlignment="Top" Width="225" Height="99" Click="Button_Click_2"/>
-        <Button Content="Click here to view Poverties for  &#xD;&#xA; different communities" Grid.Column="1" HorizontalAlignment="Left" Margin="69,37,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" Click="Button_Click_4" Height="99"/>
-        <Button Content="Click here to view Unemployment for &#xD;&#xA; different communities" Grid.Column="1" HorizontalAlignment="Left" Margin="311,37,0,0" Grid.Row="1" VerticalAlignment="Top" Width="192" Height="99" Click="Button_Click_5"/>
-        <Button Content="Click here to view per Capita Income for &#xD;&#xA; different communities" Grid.Column="1" HorizontalAlignment="Left" Margin="547,41,0,0" Grid.Row="1" VerticalAlignment="Top" Width="246" Height="91" Click="Button_Click_6"/>
-        <Button Content="Click Here to view the trend of life Expectancy in Chicago &#xD;&#xA;Select community from the drop down below" Grid.Column="1" HorizontalAlignment="Left" Margin="345,157,0,0" Grid.Row="1" VerticalAlignment="Top" Width="326" Height="133" Click="Button_Click_7"/>
-        <ComboBox Grid.Column="1" HorizontalAlignment="Left" Margin="358,350,0,0" Grid.Row="1" VerticalAlignment="Top" Width="198" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" Name ="comboBox1" Height="79"/>
+			Height="75" Margin="78,367,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="349" x:Name="ResultBox" Grid.Row="1" Grid.ColumnSpan="3" />
+        <Button Content="Clear" HorizontalAlignment="Left" Margin="96.06,289,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1" Grid.Column="2" Grid.Row="1" />
+        <Label Content="Find the Correlation between:" HorizontalAlignment="Left" VerticalAlignment="Top" Target="{Binding}" Grid.Column="1" Grid.Row="1" FontWeight="Bold" FontFamily="Tahoma" Foreground="Gray" Margin="22,157,0,0" FontSize="15" Grid.ColumnSpan="2" />
+        <Label Content="Life Expectancy Based on Socio Economic Indicators&#xD;&#xA;City of Chicago" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontFamily="Tahoma" FontWeight="Bold" FontSize="18" Background="darkturquoise" Width="700" Foreground="White"  Grid.ColumnSpan="3" Margin="193,10,202,588" Grid.RowSpan="2" />
+        <Button Grid.ColumnSpan="2" Content="Click here to view Life Expectancy for &#xD;&#xA;different communities in Chicago" HorizontalAlignment="Left" Margin="61,37,0,0" Grid.Row="1" VerticalAlignment="Top" Width="225" Height="99" Click="Button_Click_2"/>
+        <Button Content="Click here to view Poverties for  &#xD;&#xA; different communities" Grid.Column="1" HorizontalAlignment="Left" Margin="69,37,0,0" Grid.Row="1" VerticalAlignment="Top" Width="200" Click="Button_Click_4" Height="99" Grid.ColumnSpan="2"/>
+        <Button Content="Click here to view Unemployment for &#xD;&#xA; different communities" Grid.Column="2" HorizontalAlignment="Left" Margin="212.06,37,0,0" Grid.Row="1" VerticalAlignment="Top" Width="192" Height="99" Click="Button_Click_5"/>
+        <Button Content="Click here to view per Capita Income for &#xD;&#xA; different communities" Grid.Column="2" HorizontalAlignment="Left" Margin="448.06,41,0,0" Grid.Row="1" VerticalAlignment="Top" Width="246" Height="91" Click="Button_Click_6"/>
+        <Button Content="Click Here to view the trend of life Expectancy in Chicago &#xD;&#xA;Select community from the drop down below" Grid.Column="2" HorizontalAlignment="Left" Margin="246.06,157,0,0" Grid.Row="1" VerticalAlignment="Top" Width="326" Height="133" Click="Button_Click_7"/>
+        <ComboBox Grid.Column="2" HorizontalAlignment="Left" Margin="259.06,350,0,0" Grid.Row="1" VerticalAlignment="Top" Width="198" Loaded="ComboBox_Loaded" SelectionChanged="ComboBox_SelectionChanged" Name ="comboBox1" Height="79"/>
     </Grid>
 </Window>
